cmake_minimum_required(VERSION 3.13)
project(Competitive_Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(A ITP1_1_A.cpp)
add_executable(B ITP1_1_B.cpp)
add_executable(C PCK-P_0335)
add_executable(D ITP1_1_C.cpp)
add_executable(E ITP1_1_D.cpp)
add_executable(F ITP1_2_A.cpp)
add_executable(G ITP1_2_B.cpp)
add_executable(H ITP1_2_C.cpp)
add_executable(I ITP1_3_C.cpp)
add_executable(J ITP1_3_D.cpp)
add_executable(K ITP1_4_A.cpp)
add_executable(L ITP1_4_B.cpp)
add_executable(M ITP1_4_C.cpp)
add_executable(N ITP1_4_D.cpp)
add_executable(O ITP1_5_A.cpp)
add_executable(P ITP1_5_B.cpp)
add_executable(Q ITP1_5_C.cpp)
add_executable(R ITP1_5_D.cpp)
add_executable(S ITP1_6_A.cpp)

